--- a/lab9_yellow_taxi.ipynb
+++ b/lab9_yellow_taxi.ipynb
@@ -5,7 +5,9 @@
    "id": "7bf97cdc",
    "metadata": {},
    "source": [
-    "data set up"
+    "# Lab 9 — 2023 Yellow Taxi (pandas)\n",
+    "\n",
+    "This page contains my Lab 9 analysis using the 2023 NYC Yellow Taxi sample dataset.\n"
    ]
   },
   {
