update on project1

--- a/project_1_pandas.ipynb
+++ b/project_1_pandas.ipynb
@@ -7,201 +7,25 @@
    "source": [
     "# Project 1 — NYPD Shooting Incident Data (2019)\n",
     "\n",
-    "This project uses the NYPD Shooting Incident Data from 2019 to practice working with data in **pandas** and the **Python standard library**.  \n",
-    "We’ll calculate basic descriptive statistics (mean, median, mode) for a numeric column and visualize the result using pure Python.\n",
-    "\n"
+    "This notebook uses the NYPD Shooting Incident Data (2019) to calculate basic descriptive statistics (mean, median, mode) using **pandas**.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81a91892",
+   "execution_count": 1,
+   "id": "e1edf595",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>INCIDENT_KEY</th>\n",
-       "      <th>OCCUR_DATE</th>\n",
-       "      <th>OCCUR_TIME</th>\n",
-       "      <th>BORO</th>\n",
-       "      <th>PRECINCT</th>\n",
-       "      <th>JURISDICTION_CODE</th>\n",
-       "      <th>LOCATION_DESC</th>\n",
-       "      <th>STATISTICAL_MURDER_FLAG</th>\n",
-       "      <th>PERP_AGE_GROUP</th>\n",
-       "      <th>PERP_SEX</th>\n",
-       "      <th>PERP_RACE</th>\n",
-       "      <th>VIC_AGE_GROUP</th>\n",
-       "      <th>VIC_SEX</th>\n",
-       "      <th>VIC_RACE</th>\n",
-       "      <th>X_COORD_CD</th>\n",
-       "      <th>Y_COORD_CD</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>206890929</td>\n",
-       "      <td>12/31/2019</td>\n",
-       "      <td>23:15:00</td>\n",
-       "      <td>MANHATTAN</td>\n",
-       "      <td>28</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>HOTEL/MOTEL</td>\n",
-       "      <td>True</td>\n",
-       "      <td>25-44</td>\n",
-       "      <td>M</td>\n",
-       "      <td>BLACK</td>\n",
-       "      <td>25-44</td>\n",
-       "      <td>M</td>\n",
-       "      <td>BLACK</td>\n",
-       "      <td>997155</td>\n",
-       "      <td>230828</td>\n",
-       "      <td>40.800244</td>\n",
-       "      <td>-73.953390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>206891917</td>\n",
-       "      <td>12/31/2019</td>\n",
-       "      <td>20:14:00</td>\n",
-       "      <td>BROOKLYN</td>\n",
-       "      <td>73</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>25-44</td>\n",
-       "      <td>M</td>\n",
-       "      <td>BLACK</td>\n",
-       "      <td>1007235</td>\n",
-       "      <td>179932</td>\n",
-       "      <td>40.660527</td>\n",
-       "      <td>-73.917156</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>206882664</td>\n",
-       "      <td>12/30/2019</td>\n",
-       "      <td>21:29:00</td>\n",
-       "      <td>BROOKLYN</td>\n",
-       "      <td>71</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>25-44</td>\n",
-       "      <td>M</td>\n",
-       "      <td>BLACK</td>\n",
-       "      <td>25-44</td>\n",
-       "      <td>M</td>\n",
-       "      <td>BLACK</td>\n",
-       "      <td>1000996</td>\n",
-       "      <td>178614</td>\n",
-       "      <td>40.656923</td>\n",
-       "      <td>-73.939647</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>206875589</td>\n",
-       "      <td>12/30/2019</td>\n",
-       "      <td>03:17:00</td>\n",
-       "      <td>BROOKLYN</td>\n",
-       "      <td>81</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>18-24</td>\n",
-       "      <td>M</td>\n",
-       "      <td>BLACK</td>\n",
-       "      <td>1006612</td>\n",
-       "      <td>189509</td>\n",
-       "      <td>40.686815</td>\n",
-       "      <td>-73.919370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>206875589</td>\n",
-       "      <td>12/30/2019</td>\n",
-       "      <td>03:17:00</td>\n",
-       "      <td>BROOKLYN</td>\n",
-       "      <td>81</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>45-64</td>\n",
-       "      <td>M</td>\n",
-       "      <td>BLACK HISPANIC</td>\n",
-       "      <td>1006612</td>\n",
-       "      <td>189509</td>\n",
-       "      <td>40.686815</td>\n",
-       "      <td>-73.919370</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   INCIDENT_KEY  OCCUR_DATE OCCUR_TIME       BORO  PRECINCT  \\\n",
-       "0     206890929  12/31/2019   23:15:00  MANHATTAN        28   \n",
-       "1     206891917  12/31/2019   20:14:00   BROOKLYN        73   \n",
-       "2     206882664  12/30/2019   21:29:00   BROOKLYN        71   \n",
-       "3     206875589  12/30/2019   03:17:00   BROOKLYN        81   \n",
-       "4     206875589  12/30/2019   03:17:00   BROOKLYN        81   \n",
-       "\n",
-       "   JURISDICTION_CODE LOCATION_DESC  STATISTICAL_MURDER_FLAG PERP_AGE_GROUP  \\\n",
-       "0                0.0   HOTEL/MOTEL                     True          25-44   \n",
-       "1                0.0           NaN                    False            NaN   \n",
-       "2                0.0           NaN                    False          25-44   \n",
-       "3                0.0           NaN                    False            NaN   \n",
-       "4                0.0           NaN                    False            NaN   \n",
-       "\n",
-       "  PERP_SEX PERP_RACE VIC_AGE_GROUP VIC_SEX        VIC_RACE  X_COORD_CD  \\\n",
-       "0        M     BLACK         25-44       M           BLACK      997155   \n",
-       "1      NaN       NaN         25-44       M           BLACK     1007235   \n",
-       "2        M     BLACK         25-44       M           BLACK     1000996   \n",
-       "3      NaN       NaN         18-24       M           BLACK     1006612   \n",
-       "4      NaN       NaN         45-64       M  BLACK HISPANIC     1006612   \n",
-       "\n",
-       "   Y_COORD_CD   Latitude  Longitude  \n",
-       "0      230828  40.800244 -73.953390  \n",
-       "1      179932  40.660527 -73.917156  \n",
-       "2      178614  40.656923 -73.939647  \n",
-       "3      189509  40.686815 -73.919370  \n",
-       "4      189509  40.686815 -73.919370  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns: ['INCIDENT_KEY', 'OCCUR_DATE', 'OCCUR_TIME', 'BORO', 'PRECINCT', 'JURISDICTION_CODE', 'LOCATION_DESC', 'STATISTICAL_MURDER_FLAG', 'PERP_AGE_GROUP', 'PERP_SEX', 'PERP_RACE', 'VIC_AGE_GROUP', 'VIC_SEX', 'VIC_RACE', 'X_COORD_CD', 'Y_COORD_CD', 'Latitude', 'Longitude']\n",
+      "📊 Pandas Results:\n",
+      "Mean: 65.68\n",
+      "Median: 69.00\n",
+      "Mode: 75.00\n"
+     ]
     }
    ],
    "source": [
@@ -209,25 +33,17 @@
     "\n",
     "df = pd.read_csv(\"nypd_shootings_2019.csv\")\n",
     "\n",
-    "print(df.head())\n",
-    "print(\"\\nColumns:\", df.columns.tolist())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aca7fbcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numeric_col = \"PRECINCT\"\n",
+    "print(\"Columns:\", df.columns.tolist())\n",
+    "\n",
+    "numeric_col = \"PRECINCT\"  \n",
+    "\n",
     "data = df[numeric_col].dropna()\n",
     "\n",
     "mean_pandas = data.mean()\n",
     "median_pandas = data.median()\n",
     "mode_pandas = data.mode()[0]\n",
     "\n",
-    "print(\"📊 Pandas Results\")\n",
+    "print(\"📊 Pandas Results:\")\n",
     "print(f\"Mean: {mean_pandas:.2f}\")\n",
     "print(f\"Median: {median_pandas:.2f}\")\n",
     "print(f\"Mode: {mode_pandas:.2f}\")\n"
@@ -235,54 +51,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ecf4ad98",
+   "execution_count": 2,
+   "id": "d4676cd3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📈 NYPD Shootings by Precinct (approximate counts):\n",
+      "Precinct   1:  (2)\n",
+      "Precinct   5:  (3)\n",
+      "Precinct   7:  (4)\n",
+      "Precinct   9:  (5)\n",
+      "Precinct  10:  (3)\n",
+      "Precinct  13:  (2)\n",
+      "Precinct  17:  (1)\n",
+      "Precinct  18:  (1)\n",
+      "Precinct  19:  (1)\n",
+      "Precinct  20:  (2)\n",
+      "Precinct  23: *** (33)\n",
+      "Precinct  24:  (1)\n",
+      "Precinct  25: * (17)\n",
+      "Precinct  26:  (3)\n",
+      "Precinct  28: * (14)\n",
+      "Precinct  30:  (7)\n",
+      "Precinct  32: * (19)\n",
+      "Precinct  33: * (10)\n",
+      "Precinct  34: * (17)\n",
+      "Precinct  40: *** (32)\n",
+      "Precinct  41: * (17)\n",
+      "Precinct  42: *** (37)\n",
+      "Precinct  43: * (16)\n",
+      "Precinct  44: *** (34)\n",
+      "Precinct  45:  (9)\n",
+      "Precinct  46: *** (37)\n",
+      "Precinct  47: ** (25)\n",
+      "Precinct  48: ** (22)\n",
+      "Precinct  49: * (15)\n",
+      "Precinct  50:  (4)\n",
+      "Precinct  52: * (18)\n",
+      "Precinct  60: * (18)\n",
+      "Precinct  61:  (3)\n",
+      "Precinct  62:  (4)\n",
+      "Precinct  63: * (10)\n",
+      "Precinct  67: *** (33)\n",
+      "Precinct  69: * (13)\n",
+      "Precinct  70: * (15)\n",
+      "Precinct  71: * (14)\n",
+      "Precinct  72:  (4)\n",
+      "Precinct  73: **** (48)\n",
+      "Precinct  75: ****** (66)\n",
+      "Precinct  77: **** (43)\n",
+      "Precinct  78:  (1)\n",
+      "Precinct  79: *** (32)\n",
+      "Precinct  81: *** (30)\n",
+      "Precinct  83: * (14)\n",
+      "Precinct  84:  (6)\n",
+      "Precinct  88:  (9)\n",
+      "Precinct  90:  (7)\n",
+      "Precinct  94:  (2)\n",
+      "Precinct 100:  (3)\n",
+      "Precinct 101: * (15)\n",
+      "Precinct 102: * (10)\n",
+      "Precinct 103: * (13)\n",
+      "Precinct 104:  (1)\n",
+      "Precinct 105: * (18)\n",
+      "Precinct 106:  (5)\n",
+      "Precinct 107:  (2)\n",
+      "Precinct 108:  (5)\n",
+      "Precinct 109: * (10)\n",
+      "Precinct 110:  (7)\n",
+      "Precinct 112:  (2)\n",
+      "Precinct 113: *** (37)\n",
+      "Precinct 114: ** (22)\n",
+      "Precinct 115:  (8)\n",
+      "Precinct 120: * (12)\n",
+      "Precinct 121:  (7)\n",
+      "Precinct 122:  (6)\n",
+      "Precinct 123:  (1)\n"
+     ]
+    }
+   ],
    "source": [
-    "import csv\n",
+    "print(\"\\n📈 NYPD Shootings by Precinct (approximate counts):\")\n",
     "\n",
-    "values = []\n",
-    "with open(\"nypd_shootings_2019.csv\", newline='', encoding='utf-8') as f:\n",
-    "    reader = csv.DictReader(f)\n",
-    "    for row in reader:\n",
-    "        try:\n",
-    "            val = float(row[\"PRECINCT\"])\n",
-    "            values.append(val)\n",
-    "        except ValueError:\n",
-    "            pass\n",
+    "precinct_counts = data.value_counts().sort_index()\n",
     "\n",
-    "values.sort()\n",
-    "n = len(values)\n",
-    "mean_std = sum(values) / n\n",
-    "median_std = values[n//2] if n % 2 != 0 else (values[n//2 - 1] + values[n//2]) / 2\n",
-    "\n",
-    "# Mode \n",
-    "counts = {}\n",
-    "for v in values:\n",
-    "    counts[v] = counts.get(v, 0) + 1\n",
-    "mode_std = max(counts, key=counts.get)\n",
-    "\n",
-    "print(\"🧮 Standard Library Results\")\n",
-    "print(f\"Mean: {mean_std:.2f}\")\n",
-    "print(f\"Median: {median_std:.2f}\")\n",
-    "print(f\"Mode: {mode_std:.2f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c77998e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"\\n📈 NYPD Shootings by Precinct (in ASCII chart):\")\n",
-    "\n",
-    "precinct_counts = {}\n",
-    "for val in values:\n",
-    "    precinct_counts[val] = precinct_counts.get(val, 0) + 1\n",
-    "\n",
-    "for precinct, count in sorted(precinct_counts.items()):\n",
+    "for precinct, count in precinct_counts.items():\n",
     "    print(f\"Precinct {int(precinct):3}: {'*' * (count // 10)} ({count})\")\n"
    ]
   }
