--- a/project_1_hardway.ipynb
+++ b/project_1_hardway.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b7342f1d",
    "metadata": {},
    "outputs": [
@@ -75,72 +75,72 @@
       "Precinct   1:  (2)\n",
       "Precinct   5:  (3)\n",
       "Precinct   7:  (4)\n",
-      "Precinct   9:  (5)\n",
+      "Precinct   9: * (5)\n",
       "Precinct  10:  (3)\n",
       "Precinct  13:  (2)\n",
       "Precinct  17:  (1)\n",
       "Precinct  18:  (1)\n",
       "Precinct  19:  (1)\n",
       "Precinct  20:  (2)\n",
-      "Precinct  23: *** (33)\n",
+      "Precinct  23: ****** (33)\n",
       "Precinct  24:  (1)\n",
-      "Precinct  25: * (17)\n",
+      "Precinct  25: *** (17)\n",
       "Precinct  26:  (3)\n",
-      "Precinct  28: * (14)\n",
-      "Precinct  30:  (7)\n",
-      "Precinct  32: * (19)\n",
-      "Precinct  33: * (10)\n",
-      "Precinct  34: * (17)\n",
-      "Precinct  40: *** (32)\n",
-      "Precinct  41: * (17)\n",
-      "Precinct  42: *** (37)\n",
-      "Precinct  43: * (16)\n",
-      "Precinct  44: *** (34)\n",
-      "Precinct  45:  (9)\n",
-      "Precinct  46: *** (37)\n",
-      "Precinct  47: ** (25)\n",
-      "Precinct  48: ** (22)\n",
-      "Precinct  49: * (15)\n",
+      "Precinct  28: ** (14)\n",
+      "Precinct  30: * (7)\n",
+      "Precinct  32: *** (19)\n",
+      "Precinct  33: ** (10)\n",
+      "Precinct  34: *** (17)\n",
+      "Precinct  40: ****** (32)\n",
+      "Precinct  41: *** (17)\n",
+      "Precinct  42: ******* (37)\n",
+      "Precinct  43: *** (16)\n",
+      "Precinct  44: ****** (34)\n",
+      "Precinct  45: * (9)\n",
+      "Precinct  46: ******* (37)\n",
+      "Precinct  47: ***** (25)\n",
+      "Precinct  48: **** (22)\n",
+      "Precinct  49: *** (15)\n",
       "Precinct  50:  (4)\n",
-      "Precinct  52: * (18)\n",
-      "Precinct  60: * (18)\n",
+      "Precinct  52: *** (18)\n",
+      "Precinct  60: *** (18)\n",
       "Precinct  61:  (3)\n",
       "Precinct  62:  (4)\n",
-      "Precinct  63: * (10)\n",
-      "Precinct  67: *** (33)\n",
-      "Precinct  69: * (13)\n",
-      "Precinct  70: * (15)\n",
-      "Precinct  71: * (14)\n",
+      "Precinct  63: ** (10)\n",
+      "Precinct  67: ****** (33)\n",
+      "Precinct  69: ** (13)\n",
+      "Precinct  70: *** (15)\n",
+      "Precinct  71: ** (14)\n",
       "Precinct  72:  (4)\n",
-      "Precinct  73: **** (48)\n",
-      "Precinct  75: ****** (66)\n",
-      "Precinct  77: **** (43)\n",
+      "Precinct  73: ********* (48)\n",
+      "Precinct  75: ************* (66)\n",
+      "Precinct  77: ******** (43)\n",
       "Precinct  78:  (1)\n",
-      "Precinct  79: *** (32)\n",
-      "Precinct  81: *** (30)\n",
-      "Precinct  83: * (14)\n",
-      "Precinct  84:  (6)\n",
-      "Precinct  88:  (9)\n",
-      "Precinct  90:  (7)\n",
+      "Precinct  79: ****** (32)\n",
+      "Precinct  81: ****** (30)\n",
+      "Precinct  83: ** (14)\n",
+      "Precinct  84: * (6)\n",
+      "Precinct  88: * (9)\n",
+      "Precinct  90: * (7)\n",
       "Precinct  94:  (2)\n",
       "Precinct 100:  (3)\n",
-      "Precinct 101: * (15)\n",
-      "Precinct 102: * (10)\n",
-      "Precinct 103: * (13)\n",
+      "Precinct 101: *** (15)\n",
+      "Precinct 102: ** (10)\n",
+      "Precinct 103: ** (13)\n",
       "Precinct 104:  (1)\n",
-      "Precinct 105: * (18)\n",
-      "Precinct 106:  (5)\n",
+      "Precinct 105: *** (18)\n",
+      "Precinct 106: * (5)\n",
       "Precinct 107:  (2)\n",
-      "Precinct 108:  (5)\n",
-      "Precinct 109: * (10)\n",
-      "Precinct 110:  (7)\n",
+      "Precinct 108: * (5)\n",
+      "Precinct 109: ** (10)\n",
+      "Precinct 110: * (7)\n",
       "Precinct 112:  (2)\n",
-      "Precinct 113: *** (37)\n",
-      "Precinct 114: ** (22)\n",
-      "Precinct 115:  (8)\n",
-      "Precinct 120: * (12)\n",
-      "Precinct 121:  (7)\n",
-      "Precinct 122:  (6)\n",
+      "Precinct 113: ******* (37)\n",
+      "Precinct 114: **** (22)\n",
+      "Precinct 115: * (8)\n",
+      "Precinct 120: ** (12)\n",
+      "Precinct 121: * (7)\n",
+      "Precinct 122: * (6)\n",
       "Precinct 123:  (1)\n"
      ]
     }
@@ -149,7 +149,7 @@
     "print(\"\\n📈 NYPD Shootings by Precinct (in ASCII chart):\")\n",
     "\n",
     "for precinct, count in sorted(counts.items()):\n",
-    "    print(f\"Precinct {int(precinct):3}: {'*' * (count // 10)} ({count})\")\n"
+    "    print(f\"Precinct {int(precinct):3}: {'*' * (count // 5)} ({count})\")\n"
    ]
   }
  ],
